crates/analyzer/tests/snapshots/errors__trait_impl_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: method `this_has_wrong_args_in_impl` has incompatible parameters for `this_has_wrong_args_in_impl` of trait `Foo`
   ┌─ compile_errors/trait_impl_mismatch.fe:3:5
   │
 3 │     fn this_has_wrong_args_in_impl(self, val: u8, val2: bool);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ signature of method in trait `Foo`
   ·
11 │     fn this_has_wrong_args_in_impl(self, val: u16, val2: Array<u8, 10>) {}
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ signature of method in `impl` block

error: method `this_has_wrong_return_type_in_impl` has an incompatible return type for `this_has_wrong_return_type_in_impl` of trait `Foo`
   ┌─ compile_errors/trait_impl_mismatch.fe:4:5
   │
 4 │     fn this_has_wrong_return_type_in_impl(self) -> bool;
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ signature of method in trait `Foo`
   ·
12 │     fn this_has_wrong_return_type_in_impl(self) -> u8 {
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ signature of method in `impl` block

error: method `this_does_not_exist_in_trait` is not a member of trait `Foo`
   ┌─ compile_errors/trait_impl_mismatch.fe:15:5
   │
15 │     fn this_does_not_exist_in_trait() {}
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `Foo`

error: not all members of trait `Foo` implemented, missing: `this_misses_in_impl`
  ┌─ compile_errors/trait_impl_mismatch.fe:2:5
  │
2 │     fn this_misses_in_impl(self);
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this trait function is missing in `impl` block


